2008-10-13  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/extauth.erl (call_port/2): Replace jlib:nameprep/1 by
	exmpp_stringprep:nameprep/1.

	* src/gen_iq_handler.erl: Remove the deprecated list of converted
	modules.

2008-10-10  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/ejabberd_c2s.erl (is_auth_packet/1): Fix a bug where
	legacy authentication informations were not search among the query
	children but among the IQ children. Thanks to Pablo Polvorin!

	* src/mod_privacy_odbc.erl (item_to_raw/1): Fix a buf where a tuple
	was passed to exmpp_jid:jid_to_list/1 instead of a #jid. Now we use
	exmpp_jid:jid_to_list/3. Thanks to Pablo Polvorin!

	* src/ejabberd_s2s_in.erl (wait_for_feature_request/2),
	src/ejabberd_router.erl (register_route/2, unregister_route/1),
	src/ejabberd_ctl.erl (process/1), src/ejabberd_rdbms.erl
	(needs_odbc/1): Replace jlib:nameprep/1 by exmpp_stringprep:nameprep/1
	and change the error handling.

	* src/ejabberd_config.erl (normalize_hosts/2): Replace jlib:nodeprep/1
	by exmpp_stringprep:nodeprep/1 and change the error handling.

	*  src/ejabberd_c2s.erl (handle_sync_event/4): Remove a remaining
	jlib:jid_remove_resource/1 call.

	* src/ejabberd_auth_internal.erl: Replace jlib:*prep/1 by
	exmpp_stringprep:*prep/1 and change the error handling.

	* src/mod_vcard_odbc.erl (do_route/4): Replace jlib:iq_to_xml/1 by
	exmpp_iq:iq_to_xmlel/1.

	* src/mod_roster_odbc.erl (user_roster_subscribe_jid/3): Fix a bug
	where the wrong module was called (jlib instead of exmpp_jid).

	* src/ejabberd_app.erl (start/2): Don't start stringprep_sup.

	* src/ejabberd_system_monitor.erl: Convert to exmpp.

2008-10-09  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/ejabberd_c2s.erl: Fix handling of unauthenticated stanzas which
	are not request IQ. Thanks to Pablo Polvorin!

2008-10-08  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Merge from trunk (r1563 to r1613).
