@@ -6,6 +6,8 @@
 	* src/gen_iq_handler.erl: Remove the deprecated list of converted
 	modules.
 
+	* src/jd2ejd.erl: Convert to exmpp.
+
 2008-10-10  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* src/ejabberd_c2s.erl (is_auth_packet/1): Fix a bug where
